<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
<TextView
    android:textSize="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:id="@+id/tv_register"
    android:text="@string/register"/>
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_image"
        android:src="@drawable/user"/>
    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_image"
        android:id="@+id/tv_account"
        android:text="@string/accountName"
        android:layout_below="@id/tv_register"
        android:textSize="25dp"/>
    <EditText
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_account"
        android:layout_below="@id/tv_register"
        android:id="@+id/et_enterNew"
        android:hint="@string/enterAccount"/>
      <TextView
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_enterNew"
        android:id="@+id/tv_re_pwd"
        android:text="@string/re_Pwd"
        android:layout_toRightOf="@id/tv_image"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:layout_marginTop="2dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_enterRePwd"
        android:hint="@string/enterRePwd"
        android:inputType="textPassword"
        android:layout_below="@id/et_enterNew"
        android:layout_toRightOf="@id/tv_re_pwd"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_enterRePwd"
        android:id="@+id/tv_rere_pwd"
        android:text="@string/checkPwd"
        android:layout_toRightOf="@id/tv_image"

        />
    <EditText
        android:layout_marginTop="2dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_enterReRePwd"
        android:hint="@string/rrenterPwd"
        android:inputType="textPassword"
        android:layout_below="@id/et_enterRePwd"
        android:layout_toRightOf="@id/tv_re_pwd"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_enterReRePwd"
        android:id="@+id/tv_phoneNumber"
        android:text="@string/phoneNumber"
        android:layout_toRightOf="@id/tv_image"

        />
    <EditText
        android:layout_marginTop="2dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_enterPhone"
        android:hint="@string/enterPhNu"
        android:inputType="phone"
        android:layout_below="@id/et_enterReRePwd"
        android:layout_toRightOf="@id/tv_re_pwd"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_toRightOf="@id/tv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phoneNumber"
        android:id="@+id/tv_gender"
        android:text="性　　别："/>
    <RadioButton
        android:layout_toRightOf="@id/tv_gender"
        android:layout_below="@id/et_enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_male"
        android:text="@string/male"
        android:checked="true"/>
    <RadioButton
        android:layout_toRightOf="@id/tv_gender"
        android:layout_below="@id/rb_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rb_female"
        android:text="@string/female"
       />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg_radioGroup"
        android:layout_below="@id/tv_phoneNumber"
        android:contentDescription="@string/gender">

    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confireregister"
        android:id="@+id/btn_conRegister"
        android:layout_below="@id/rb_female"
        android:layout_toRightOf="@id/tv_phoneNumber"/>




</RelativeLayout>