<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.application_login.MainActivity">

    <TextView
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/tv_login"/>
    <TextView
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_useName"
        android:text="@string/useName"
        android:layout_below="@id/tv_login"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_useName"
        android:layout_below="@id/tv_login"
        android:gravity="center"
        android:id="@+id/et_enterUseName"
        android:hint="@string/enterUseName"/>
    <TextView
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_usepwd"
        android:text="@string/usePwd"
        android:layout_below="@id/tv_useName"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tv_usepwd"
        android:layout_below="@id/et_enterUseName"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/enterUsePwd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_usepwd"
        android:id="@+id/line1">
        <CheckBox
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           android:id="@+id/cb_remU"
            android:text="@string/remberName"
            />
        <CheckBox
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cb_remP"
            android:text="@string/remberPwd"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/line1"
        android:id="@+id/line2">
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/llogin"/>
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reigster"
            android:text="@string/lregister"/>


    </LinearLayout>

    <TextView
        android:paddingTop="150dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_forgetPwd"
        android:layout_marginTop="50dp"
        android:text="@string/forgetPwd"/>

</RelativeLayout>
